syntax = "proto3";

package manager.api.feedback;

option go_package = "manager/api/feedback;feedback";
option java_multiple_files = true;
option java_package = "manager.api.feedback";

import "api/feedback/proto/feedback.proto";
import "google/api/annotations.proto";

service Feedback{

  // ListFeedbackCategory 获取反馈建议分类列表
  rpc ListFeedbackCategory (ListFeedbackCategoryRequest) returns (ListFeedbackCategoryReply) {
    option (google.api.http) = {
      get: "/manager/api/v1/feedback/categories",
      additional_bindings:{
        get: "/manager/client/v1/feedback_categories",
      }
    };
  }

  // CreateFeedbackCategory 创建反馈建议分类
  rpc CreateFeedbackCategory (CreateFeedbackCategoryRequest) returns (CreateFeedbackCategoryReply) {
    option (google.api.http) = {
      post: "/manager/api/v1/feedback/category",
      body: "*"
    };
  }

  // UpdateFeedbackCategory 更新反馈建议分类
  rpc UpdateFeedbackCategory (UpdateFeedbackCategoryRequest) returns (UpdateFeedbackCategoryReply) {
    option (google.api.http) = {
      put: "/manager/api/v1/feedback/category",
      body: "*"
    };
  }

  // DeleteFeedbackCategory 删除反馈建议分类
  rpc DeleteFeedbackCategory (DeleteFeedbackCategoryRequest) returns (DeleteFeedbackCategoryReply) {
    option (google.api.http) = {
      delete: "/manager/api/v1/feedback/category",
    };
  }

  // ListFeedback 获取反馈建议列表
  rpc ListFeedback (ListFeedbackRequest) returns (ListFeedbackReply) {
    option (google.api.http) = {
      get: "/manager/api/v1/feedbacks",
    };
  }

  // CreateFeedback 创建反馈建议
  rpc CreateFeedback (CreateFeedbackRequest) returns (CreateFeedbackReply) {
    option (google.api.http) = {
      post: "/manager/client/v1/feedback",
      body: "*"
    };
  }

  // DeleteFeedback 删除反馈建议
  rpc DeleteFeedback (DeleteFeedbackRequest) returns (DeleteFeedbackReply) {
    option (google.api.http) = {
      delete: "/manager/api/v1/feedback",
    };
  }

  // UpdateFeedback 更新反馈建议
  rpc UpdateFeedback (UpdateFeedbackRequest) returns (UpdateFeedbackReply) {
    option (google.api.http) = {
      put: "/manager/api/v1/feedback",
      body: "*"
    };
  }

}